@@ -866,7 +866,7 @@ $TCA['tx_hisodat_entities'] = Array (
 $TCA['tx_hisodat_sources'] = Array (
 	'ctrl' => $TCA['tx_hisodat_sources']['ctrl'],
 	'interface' => Array (
-		'showRecordFieldList' => 'hidden,signature,signature_add,urn,archive_uid,date_comment,date_start,date_end,short,sourcetext,description;;;;3-3-3,persons_uids,localities_uids,entities_uids;;;;3-3-3,keywords_uids,literature_uids,sources_uids;;;;3-3-3,image,imagecaption,;;;;3-3-3,editor_id,editor_comment'
+		'showRecordFieldList' => 'hidden,signature,signature_add,urn,archive_uid,date_comment,date_start,date_end,date_sorting,short,sourcetext,description;;;;3-3-3,persons_uids,localities_uids,entities_uids;;;;3-3-3,keywords_uids,literature_uids,sources_uids;;;;3-3-3,image,imagecaption,;;;;3-3-3,editor_id,editor_comment'
 	),
 	'feInterface' => $TCA['tx_hisodat_sources']['feInterface'],
 	'columns' => Array (
@@ -955,6 +955,16 @@ $TCA['tx_hisodat_sources'] = Array (
 				'eval' => 'trim',
 			)
 		),
+		'date_sorting' => Array (
+			'exclude' => 1,
+			'label' => 'LLL:EXT:hisodat/lang/locallang_db.php:tx_hisodat_sources.date_sorting',
+			'config' => Array (
+				'type' => 'input',
+				'size' => '30',
+				'max' => '255',
+				'eval' => 'trim',
+			)
+		),		
 		'date_comment' => Array (
 			'exclude' => 1,
 			'label' => 'LLL:EXT:hisodat/lang/locallang_db.php:tx_hisodat_sources.date_comment',
@@ -1193,7 +1203,7 @@ $TCA['tx_hisodat_sources'] = Array (
 	),
 	'types' => Array (
 		'0' => Array('showitem' => '
-				--div--;LLL:EXT:hisodat/lang/locallang_db.php:tx_hisodat_sources.div1,hidden,signature,signature_add,urn,archive_uid,date_comment,date_start,date_end,
+				--div--;LLL:EXT:hisodat/lang/locallang_db.php:tx_hisodat_sources.div1,hidden,signature,signature_add,urn,archive_uid,date_comment,date_start,date_end,date_sorting,
 				--div--;LLL:EXT:hisodat/lang/locallang_db.php:tx_hisodat_sources.div2,short,sourcetext,description;;;richtext[cut|copy|paste|formatblock|textcolor|bold|italic|underline|left|center|right|orderedlist|unorderedlist|outdent|indent|link|table|image|line|chMode]:rte_transform[mode=ts_css|imgpath=uploads/pics/],
 				--div--;LLL:EXT:hisodat/lang/locallang_db.php:tx_hisodat_sources.div3,keywords_uids,literature_uids,
 				--div--;LLL:EXT:hisodat/lang/locallang_db.php:tx_hisodat_sources.div4,persons_uids,localities_uids,entities_uids,sources_uids,
